--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -13,7 +13,7 @@ body{
 #Taikii{
     position: relative;
     width: 100%;
-    height: 132vh;
+    height: 130vh;
     background-color: rgba(145, 114, 78, 0.747);
     /* overflow: hidden; */
 }
@@ -34,7 +34,8 @@ body{
 
 #Taikii .t-nav{
     height: 80px;
-    background-color: rgba(141, 107, 67, 0.801);
+    background-color: rgb(141, 106, 67);
+
 }
 
 #Taikii nav{
@@ -175,25 +176,55 @@ body{
     gap: 50px;
 }
 
-.album{
+/* .album{
     margin: 10% 35%;
     width: 30%;
     height: auto;
-
-}
+} */
 
 .item1{
-    
     grid-area: item1;
-    text-align: center;
+    margin: auto;
+    /* width: 50%; */
+    border: 5px solid rgb(141, 106, 67);
+    padding: 16px;
 }
 
 .item2{
     grid-area: item2;
-    text-align: center;
+    margin: auto;
+    /* width: 50%; */
+    border: 5px solid rgb(141, 106, 67);
+    padding: 16px;
 }
 
 .item3{
     grid-area: item3;
+    margin: auto;
+    /* width: 50%; */
+    border: 5px solid rgb(141, 106, 67);
+    padding: 16px;
+}
+
+.flex-para{
+    display: flex;
+    box-sizing: border-box;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.box1{
+    display: block;
+    box-sizing: border-box;
+    width: 90%;
+    font-size: 20px;
+}
+
+.content{
+    border-radius: 50px;
+    color: black;
+    background-color: rgb(0, 255, 55);
+    /* border: 5px solid rgb(0, 0, 0); */
+    padding: 16px;
     text-align: center;
 }
